Fix swagger init
